# Addon-Template

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  cookiecutter.json  local_extensions.py  package.xml  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml
Documentation/: README.md
Documentation/Usage/: Howto-X.md
Resources/Documents/: Overview.md
freecad/Minimal/: __init__.py  init_gui.py
freecad/Minimal/Misc/: Resources.py  __init__.py
freecad/Minimal/Qt/: Core.py  Gui.py  Widget.py  Widgets.py  __init__.py
freecad/Minimal/misc/: __init__.py  resources.py
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
templates/: mit.txt  other.txt
{{cookiecutter.project_slug}}/: .codespellrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE-Assets  LICENSE-Code  README.md  package.xml  pixi.toml  pyproject.toml
{{cookiecutter.project_slug}}/freecad/{{cookiecutter.addon_module_name}}/: __init__.py  example_workbench.py  init_gui.py  version.py
{{cookiecutter.project_slug}}/freecad/{{cookiecutter.addon_module_name}}/commands/: __init__.py  example_command.py  example_manipulator.py
{{cookiecutter.project_slug}}/freecad/{{cookiecutter.addon_module_name}}/features/: __init__.py  example_feature_object.py  example_feature_vp.py
{{cookiecutter.project_slug}}/freecad/{{cookiecutter.addon_module_name}}/resources/: __init__.py
{{cookiecutter.project_slug}}/freecad/{{cookiecutter.addon_module_name}}/resources/docs/: Overview.md
{{cookiecutter.project_slug}}/freecad/{{cookiecutter.addon_module_name}}/resources/translations/: README.md  update_translation.py  {{cookiecutter.addon_module_name}}_es-ES.ts
