# SPDX-License-Identifier: LGPL-3.0-or-later
# SPDX-FileNotice: Part of the Minimal addon.

[project]
# Unused — FreeCAD addons are distributed via package.xml, not pip.
version = "0.0.0"
name = "Addon"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "freecad-stubs>=1.0.21",
    "pyside6>=6.11.0",
]
